feat: update NewLinkService to use URI for URL validation and rename UserRolesPersistenceAdapter to UserRolePersistenceAdapter